# langchain-in-action

./: .env.example  .gitignore  README.md
eco-tools/: serve.py
eco-tools/template/: README.md  pyproject.toml
eco-tools/template/template/: __init__.py  chain.py
fast-build/: my_chainlit_example1.py  my_chainlit_example2.py  my_streamlit_example1.py  my_streamlit_example2.py
use-cases/: doc-chatbot.ipynb  role-play.ipynb  summerization.ipynb  web-search.ipynb
